--- a/JSCalculator.html
+++ b/JSCalculator.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>JS Calculator</title>
+  <title>Mario Calculator</title>
 <script src='jquery-3.1.1.min.js'></script>
 <link type="text/css" rel= "stylesheet" href="style.css"></>
 </head>
 <body>
-
   <script src='JSCalculator.js'></script>
 
 </body>
